version 1.0.1.0 with PWLPNew and PWLPNewForModeSwitch